Fix spacing vars to reference new Polaris 12 tokens

--- a/src/components/AppliesTo/AppliesTo.scss
+++ b/src/components/AppliesTo/AppliesTo.scss
@@ -1,5 +1,5 @@
 @import '../../styles/common';
 
 .SelectedItemsActivator {
-  margin-top: var(--p-space-2);
+  margin-top: var(--p-space-200);
 }
