--- a/src/components/CountriesAndRatesCard/CountriesAndRatesCard.scss
+++ b/src/components/CountriesAndRatesCard/CountriesAndRatesCard.scss
@@ -5,5 +5,5 @@
 }
 
 .CountryModalActivator {
-  margin-top: var(--p-space-2);
+  margin-top: var(--p-space-200);
 }
